🚑 Change workflow GITHUB_TOKEN to ADDON_TOKEN

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,4 +15,4 @@ jobs:
   workflows:
     uses: barisozdag/workflows/.github/workflows/addon-ci.yaml@main
     secrets:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      ADDON_TOKEN: ${{ secrets.GITHUB_TOKEN }}
