⬆️ Downgrades Deluge to v2.0.3-3.1
There is an error with deluge-web v2.0.4

--- a/deluge/Dockerfile
+++ b/deluge/Dockerfile
@@ -16,13 +16,13 @@ RUN \
     apt-get update \
     && apt-get install -y --no-install-recommends \
         gnupg=2.2.27-2 \
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C5E6A5ED249AD24C \
-    && echo "deb http://ppa.launchpad.net/deluge-team/stable/ubuntu hirsute main" >> \
-        /etc/apt/sources.list.d/deluge.list \
-    && echo "deb-src http://ppa.launchpad.net/deluge-team/stable/ubuntu hirsute main" >> \
-        /etc/apt/sources.list.d/deluge.list \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends \
+    # && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C5E6A5ED249AD24C \
+    # && echo "deb http://ppa.launchpad.net/deluge-team/stable/ubuntu hirsute main" >> \
+    #     /etc/apt/sources.list.d/deluge.list \
+    # && echo "deb-src http://ppa.launchpad.net/deluge-team/stable/ubuntu hirsute main" >> \
+    #     /etc/apt/sources.list.d/deluge.list \
+    # && apt-get update \
+    # && apt-get install -y --no-install-recommends \
         deluge-common=${RELEASE} \
         deluged=${RELEASE} \
         deluge-console=${RELEASE} \
