--- a/deluge/build.yaml
+++ b/deluge/build.yaml
@@ -5,4 +5,4 @@ build_from:
   armv7: ghcr.io/hassio-addons/debian-base/armv7:5.2.2
   i386: ghcr.io/hassio-addons/debian-base/i386:5.2.2
 args:
-  release: 2.0.3-3.1
+  release: 2.0.5-0~202112151848~ubuntu21.04.1
