--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,5 +16,6 @@ jobs:
   workflows:
     uses: barisozdag/workflows/.github/workflows/addon-deploy.yaml@main
     secrets:
+      CAS_API_KEY: ${{ secrets.CAS_API_KEY }}
       DISPATCH_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
       ADDON_TOKEN: ${{ secrets.GITHUB_TOKEN }}
