--- a/deluge/build.yaml
+++ b/deluge/build.yaml
@@ -6,3 +6,6 @@ build_from:
   i386: ghcr.io/hassio-addons/debian-base/i386:5.3.0
 args:
   release: 2.0.5-0~202112151848~ubuntu21.04.1
+codenotary:
+  base_image: codenotary@frenck.dev
+  signer: baris@ozdag.net
